#96 : fix solr & elastic for ddev instalation

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
-        "drupal/elasticsearch_connector": "^7.0@alpha",
+        "drupal/elasticsearch_connector": "^7.x-dev",
         "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
         "drupal/gin": "^3.0@beta",
