--- a/config/default/search_api.server.solr_server.yml
+++ b/config/default/search_api.server.solr_server.yml
@@ -41,7 +41,7 @@ backend_config:
   connector: standard
   connector_config:
     scheme: http
-    host: solr
+    host: localhost
     port: 8983
     path: /
     core: maincore
