--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "drupal/stage_file_proxy": "^2.0",
         "lemberg/draft-environment": "^3.5.0",
         "mglaman/phpstan-drupal": "^1.1",
+        "phpcompatibility/php-compatibility": "^9.3",
+        "phpro/grumphp": "*",
         "phpspec/prophecy-phpunit": "^2",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
@@ -54,6 +56,7 @@
         "drupal/xmlsitemap": "^1.4",
         "drupal/yoast_seo": "^1.7",
         "drush/drush": "^11.0",
+        "php-parallel-lint/php-parallel-lint": "^1.3",
         "platformsh/config-reader": "^2.4"
     },
     "repositories": [
@@ -107,7 +110,8 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "lemberg/draft-environment": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpro/grumphp": true
         }
     },
     "autoload": {
