--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "drupal/stage_file_proxy": "^2.0",
         "lemberg/draft-environment": "^3.5.0",
         "mglaman/phpstan-drupal": "^1.1",
+        "phpro/grumphp": "*",
         "phpspec/prophecy-phpunit": "^2",
         "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-phpunit": "^1.3",
@@ -107,7 +108,8 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "lemberg/draft-environment": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpro/grumphp": true
         }
     },
     "autoload": {
