--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
         "drupal/elasticsearch_connector": "^7.x-dev",
+        "drupal/environment_indicator": "^4.0",
         "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
         "drupal/gin": "^3.0@beta",
