--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -44,6 +44,7 @@ module:
   elasticsearch_connector: 0
   entity: 0
   entity_reference_revisions: 0
+  environment_indicator: 0
   fences: 0
   field: 0
   field_group: 0
