--- a/config/default/core.entity_form_display.commerce_product.default.default.yml
+++ b/config/default/core.entity_form_display.commerce_product.default.default.yml
@@ -5,8 +5,11 @@ dependencies:
   config:
     - commerce_product.commerce_product_type.default
     - field.field.commerce_product.default.body
+    - field.field.commerce_product.default.categories
     - field.field.commerce_product.default.field_image
-    - field.field.commerce_product.default.field_metatags
+    - field.field.commerce_product.default.meta_tags
+    - field.field.commerce_product.default.related_products
+    - field.field.commerce_product.default.tags
   module:
     - commerce
     - commerce_product
@@ -20,6 +23,8 @@ third_party_settings:
     group_tabs:
       children:
         - group_main
+        - group_categories_tags
+        - group_related_products
         - group_variation
       label: Tabs
       region: content
@@ -55,7 +60,38 @@ third_party_settings:
       label: Variation
       region: content
       parent_name: group_tabs
+      weight: 14
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_categories_tags:
+      children:
+        - categories
+        - tags
+      label: 'Categories & Tags'
+      region: content
+      parent_name: group_tabs
       weight: 12
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_related_products:
+      children:
+        - related_products
+      label: 'Related Products'
+      region: content
+      parent_name: group_tabs
+      weight: 13
       format_type: tab
       format_settings:
         classes: ''
@@ -81,9 +117,19 @@ content:
       placeholder: ''
       show_summary: false
     third_party_settings: {  }
+  categories:
+    type: entity_reference_autocomplete
+    weight: 2
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -94,43 +140,63 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
-  field_metatags:
+  langcode:
+    type: language_select
+    weight: 3
+    region: content
+    settings:
+      include_locked: true
+    third_party_settings: {  }
+  meta_tags:
     type: metatag_firehose
-    weight: 13
+    weight: 1
     region: content
     settings:
       sidebar: true
       use_details: true
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  related_products:
+    type: entity_reference_autocomplete
+    weight: 8
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 6
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   stores:
     type: commerce_entity_select
-    weight: 1
+    weight: 2
     region: content
     settings:
       hide_single_entity: true
       autocomplete_threshold: 7
       autocomplete_size: 60
       autocomplete_placeholder: ''
+    third_party_settings: {  }
+  tags:
+    type: entity_reference_autocomplete_tags
+    weight: 3
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -142,7 +208,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 3
+    weight: 4
     region: content
     settings:
       match_operator: CONTAINS
