--- a/config/default/views.view.content.yml
+++ b/config/default/views.view.content.yml
@@ -1,13 +1,10 @@
 uuid: a6557fcb-3bfc-4f3c-a955-9670f9794d75
 langcode: en
-status: true
+status: false
 dependencies:
-  config:
-    - field.storage.node.field_yoast_seo
   module:
     - node
     - user
-    - yoast_seo
 _core:
   default_config_hash: P7F4DFe8BL31DRVqsvS-ix9KZZqvvaPjZ7zEvGo9yNM
 id: content
@@ -240,12 +237,6 @@ display:
           empty_zero: false
           hide_alter_empty: true
           destination: true
-        field_yoast_seo:
-          id: field_yoast_seo
-          table: node__field_yoast_seo
-          field: field_yoast_seo
-          plugin_id: field
-          type: yoastseo_formatter
       pager:
         type: full
         options:
@@ -591,8 +582,7 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_yoast_seo'
+      tags: {  }
   page_1:
     id: page_1
     display_title: Page
@@ -624,5 +614,4 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      tags:
-        - 'config:field.storage.node.field_yoast_seo'
+      tags: {  }
