--- a/config/default/core.entity_form_display.node.component_page.default.yml
+++ b/config/default/core.entity_form_display.node.component_page.default.yml
@@ -4,15 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.component_page.body
-    - field.field.node.component_page.field_meta_tags
-    - field.field.node.component_page.field_yoast_seo
     - field.field.node.component_page.layout_builder__layout
+    - field.field.node.component_page.meta_tags
     - node.type.component_page
   module:
     - metatag
     - path
     - text
-    - yoast_seo
 id: node.component_page.default
 targetEntityType: node
 bundle: component_page
@@ -34,27 +32,20 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_meta_tags:
-    type: metatag_firehose
-    weight: 131
-    region: content
-    settings:
-      sidebar: true
-      use_details: true
-    third_party_settings: {  }
-  field_yoast_seo:
-    type: yoast_seo_widget
-    weight: 132
-    region: content
-    settings:
-      body: body
-    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 2
     region: content
     settings:
       include_locked: true
+    third_party_settings: {  }
+  meta_tags:
+    type: metatag_firehose
+    weight: 131
+    region: content
+    settings:
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   path:
     type: path
