--- a/config/default/core.entity_view_display.commerce_product.default.teaser.yml
+++ b/config/default/core.entity_view_display.commerce_product.default.teaser.yml
@@ -6,10 +6,14 @@ dependencies:
     - commerce_product.commerce_product_type.default
     - core.entity_view_mode.commerce_product.teaser
     - field.field.commerce_product.default.body
+    - field.field.commerce_product.default.categories
     - field.field.commerce_product.default.field_image
-    - field.field.commerce_product.default.field_metatags
+    - field.field.commerce_product.default.meta_tags
+    - field.field.commerce_product.default.related_products
+    - field.field.commerce_product.default.tags
     - image.style.medium
   module:
+    - fences
     - media
 _core:
   default_config_hash: 10qgl6V_HwkrJufzsNCV75OpqOeMzzKDJb3BhaogmzQ
@@ -18,12 +22,31 @@ targetEntityType: commerce_product
 bundle: default
 mode: teaser
 content:
+  categories:
+    type: entity_reference_label
+    label: inline
+    settings:
+      link: false
+    third_party_settings:
+      fences:
+        fences_field_tag: div
+        fences_field_classes: ''
+        fences_field_items_wrapper_tag: none
+        fences_field_items_wrapper_classes: ''
+        fences_field_item_tag: div
+        fences_field_item_classes: ''
+        fences_label_tag: div
+        fences_label_classes: ''
+    weight: 2
+    region: content
   field_image:
     type: media_thumbnail
     label: hidden
     settings:
       image_link: content
       image_style: medium
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
@@ -42,13 +65,15 @@ content:
       view_mode: summary
       link: false
     third_party_settings: {  }
-    weight: 2
+    weight: 3
     region: content
 hidden:
   body: true
   created: true
-  field_metatags: true
   langcode: true
+  meta_tags: true
+  related_products: true
   search_api_excerpt: true
   stores: true
+  tags: true
   uid: true
