--- a/config/default/core.entity_view_display.node.component_page.default.yml
+++ b/config/default/core.entity_view_display.node.component_page.default.yml
@@ -4,9 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.node.component_page.body
-    - field.field.node.component_page.field_meta_tags
-    - field.field.node.component_page.field_yoast_seo
     - field.field.node.component_page.layout_builder__layout
+    - field.field.node.component_page.meta_tags
     - node.type.component_page
   module:
     - layout_builder
@@ -25,11 +24,11 @@ third_party_settings:
         layout_settings:
           label: ''
         components:
-          9bc82782-4821-4021-a31a-5904936911b4:
-            uuid: 9bc82782-4821-4021-a31a-5904936911b4
+          e5f1f919-1364-4b9d-91bc-c6f0f873f28f:
+            uuid: e5f1f919-1364-4b9d-91bc-c6f0f873f28f
             region: content
             configuration:
-              id: 'field_block:node:component_page:field_meta_tags'
+              id: 'field_block:node:component_page:meta_tags'
               label_display: '0'
               context_mapping:
                 entity: layout_builder.entity
@@ -39,22 +38,6 @@ third_party_settings:
                 settings: {  }
                 third_party_settings: {  }
             weight: 0
-            additional: {  }
-          c6eacc93-e953-4187-ac03-de1e357b97a9:
-            uuid: c6eacc93-e953-4187-ac03-de1e357b97a9
-            region: content
-            configuration:
-              id: 'field_block:node:component_page:field_yoast_seo'
-              label_display: '0'
-              context_mapping:
-                entity: layout_builder.entity
-              formatter:
-                type: string
-                label: above
-                settings:
-                  link_to_entity: false
-                third_party_settings: {  }
-            weight: 1
             additional: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
@@ -78,25 +61,17 @@ content:
     third_party_settings: {  }
     weight: 101
     region: content
-  field_meta_tags:
+  links:
+    settings: {  }
+    third_party_settings: {  }
+    weight: 100
+    region: content
+  meta_tags:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
     weight: 102
-    region: content
-  field_yoast_seo:
-    type: string
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    weight: 103
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 100
     region: content
 hidden:
   langcode: true
