--- a/config/default/core.entity_view_display.node.component_page.teaser.yml
+++ b/config/default/core.entity_view_display.node.component_page.teaser.yml
@@ -5,9 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.component_page.body
-    - field.field.node.component_page.field_meta_tags
-    - field.field.node.component_page.field_yoast_seo
     - field.field.node.component_page.layout_builder__layout
+    - field.field.node.component_page.meta_tags
     - node.type.component_page
   module:
     - text
@@ -31,8 +30,7 @@ content:
     weight: 100
     region: content
 hidden:
-  field_meta_tags: true
-  field_yoast_seo: true
   langcode: true
   layout_builder__layout: true
+  meta_tags: true
   search_api_excerpt: true
