--- a/config/default/core.entity_view_display.commerce_product.default.default.yml
+++ b/config/default/core.entity_view_display.commerce_product.default.default.yml
@@ -6,8 +6,10 @@ dependencies:
     - commerce_product.commerce_product_type.default
     - field.field.commerce_product.default.body
     - field.field.commerce_product.default.categories
+    - field.field.commerce_product.default.featured
     - field.field.commerce_product.default.field_image
     - field.field.commerce_product.default.meta_tags
+    - field.field.commerce_product.default.popular
     - field.field.commerce_product.default.related_products
     - field.field.commerce_product.default.tags
     - image.style.medium
@@ -28,15 +30,24 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 2
+    weight: 3
     region: content
   categories:
     type: entity_reference_label
     label: inline
     settings:
-      link: true
-    third_party_settings: {  }
-    weight: 5
+      link: false
+    third_party_settings:
+      fences:
+        fences_field_tag: div
+        fences_field_classes: ''
+        fences_field_items_wrapper_tag: none
+        fences_field_items_wrapper_classes: ''
+        fences_field_item_tag: div
+        fences_field_item_classes: ''
+        fences_label_tag: div
+        fences_label_classes: ''
+    weight: 2
     region: content
   field_image:
     type: media_thumbnail
@@ -54,15 +65,7 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 4
-    region: content
-  related_products:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 7
+    weight: 5
     region: content
   tags:
     type: entity_reference_label
@@ -86,11 +89,14 @@ content:
     settings:
       combine: true
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
 hidden:
   created: true
+  featured: true
   langcode: true
+  popular: true
+  related_products: true
   search_api_excerpt: true
   stores: true
   uid: true
