--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,12 @@
         "drupal/environment_indicator": "^4.0",
         "drupal/fences": "^3.0",
         "drupal/field_group": "^3.2",
-        "drupal/gin": "^3.0@beta",
+        "drupal/gin": "^3.0@RC",
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/google_analytics": "^4.0",
         "drupal/google_tag": "^1.5",
         "drupal/hreflang": "^1.9",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jquery_ui_accordion": "^2.0",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/layout_builder_restrictions": "^2.12",
@@ -54,6 +55,7 @@
         "drupal/search_api": "^1.26",
         "drupal/search_api_solr": "^4.2",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/state_machine": "^1.7",
         "drupal/xmlsitemap": "^1.4",
         "drupal/yoast_seo": "^1.7",
         "drush/drush": "^11.0",
