--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -33,6 +33,7 @@ module:
   commerce_shipping: 0
   commerce_store: 0
   commerce_tax: 0
+  commerce_wishlist: 0
   config: 0
   contact: 0
   contextual: 0
