--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -42,6 +42,7 @@ module:
   dblog: 0
   draft_cart: 0
   draft_search: 0
+  draft_wishlist: 0
   dynamic_page_cache: 0
   editor: 0
   elasticsearch_connector: 0
