commerce_draft-115: Allow anonymouse users for using wishlist.

--- a/config/default/commerce_wishlist.commerce_wishlist_type.default.yml
+++ b/config/default/commerce_wishlist.commerce_wishlist_type.default.yml
@@ -6,4 +6,4 @@ _core:
   default_config_hash: cHDXesbGIruR8gM42K02dHrxi9Y9OTOxTdHVYuBlKtU
 label: Default
 id: default
-allowAnonymous: false
+allowAnonymous: true
