--- a/config/default/views.view.products.yml
+++ b/config/default/views.view.products.yml
@@ -14,6 +14,7 @@ dependencies:
     - commerce_product
     - media
     - state_machine
+    - taxonomy
 id: products
 label: Products
 module: views
@@ -962,6 +963,9 @@ display:
     display_plugin: page
     position: 1
     display_options:
+      defaults:
+        relationships: false
+      relationships: {  }
       display_extenders:
         simple_sitemap_display_extender: {  }
         metatag_display_extender:
@@ -1075,6 +1079,197 @@ display:
           entity_type: commerce_product
           plugin_id: entity_reverse
           required: true
+      display_description: ''
+      display_extenders:
+        simple_sitemap_display_extender: {  }
+        metatag_display_extender:
+          metatags: {  }
+          tokenize: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+      tags: {  }
+  same_category:
+    id: same_category
+    display_title: 'Same category'
+    display_plugin: block
+    position: 6
+    display_options:
+      title: 'Same category'
+      sorts: {  }
+      arguments:
+        product_id:
+          id: product_id
+          table: commerce_product_field_data
+          field: product_id
+          relationship: reverse__commerce_product__categories
+          group_type: group
+          admin_label: ''
+          entity_type: commerce_product
+          entity_field: product_id
+          plugin_id: numeric
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: product
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+        product_id_1:
+          id: product_id_1
+          table: commerce_product_field_data
+          field: product_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          entity_type: commerce_product
+          entity_field: product_id
+          plugin_id: numeric
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: product
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            override: false
+            items_per_page: 25
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: true
+      filters:
+        status:
+          id: status
+          table: commerce_product_field_data
+          field: status
+          entity_type: commerce_product
+          entity_field: status
+          plugin_id: boolean
+          value: '1'
+          group: 1
+          expose:
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+        type:
+          id: type
+          table: commerce_product_field_data
+          field: type
+          relationship: none
+          group_type: count_distinct
+          admin_label: ''
+          entity_type: commerce_product
+          entity_field: type
+          plugin_id: commerce_entity_bundle
+          operator: '='
+          value:
+            min: ''
+            max: ''
+            value: '1'
+            default: default
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            hide_single_bundle: true
+            placeholder: ''
+            min_placeholder: ''
+            max_placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      defaults:
+        title: false
+        group_by: false
+        relationships: false
+        sorts: false
+        arguments: false
+        filters: false
+        filter_groups: false
+      relationships:
+        categories:
+          id: categories
+          table: commerce_product__categories
+          field: categories
+          relationship: none
+          group_type: group
+          admin_label: 'categories: Taxonomy term'
+          plugin_id: standard
+          required: false
+        reverse__commerce_product__categories:
+          id: reverse__commerce_product__categories
+          table: taxonomy_term_field_data
+          field: reverse__commerce_product__categories
+          relationship: categories
+          group_type: group
+          admin_label: categories
+          entity_type: taxonomy_term
+          plugin_id: entity_reverse
+          required: false
+      group_by: true
       display_description: ''
       display_extenders:
         simple_sitemap_display_extender: {  }
