--- a/docroot/modules/custom/draft_breadcrumb/draft_breadcrumb.info.yml
+++ b/docroot/modules/custom/draft_breadcrumb/draft_breadcrumb.info.yml
@@ -1,4 +1,4 @@
-name: Draft Breadcrumbs
+name: Draft Breadcrumb
 type: module
 description: Provides product categories for breadcrumbs.
 package: Custom
