--- a/config/default/views.view.recently_read_product.yml
+++ b/config/default/views.view.recently_read_product.yml
@@ -188,7 +188,16 @@ display:
           value:
             default: default
       style:
-        type: default
+        type: grid
+        options:
+          uses_fields: false
+          columns: 4
+          automatic_width: true
+          alignment: horizontal
+          row_class_custom: ''
+          row_class_default: true
+          col_class_custom: ''
+          col_class_default: true
       row:
         type: 'entity:commerce_product'
         options:
