--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         "drupal/pathauto": "^1.11",
         "drupal/price_difference_formatter": "^1.2",
         "drupal/rdf": "^2.1",
+        "drupal/recently_read": "^1.3",
         "drupal/redirect": "^1.8",
         "drupal/robotstxt": "^1.4",
         "drupal/search_api": "^1.26",
