#115. Added wishlist module. (#135)
* commerce_draft-126:
Added wishlist functionality. Installed Wishlist module. Updated commerce_cart.

* commerce_draft-115:
Added  draft_wishlist module. Alter commerce-wishlist-user-form template.

* Delete commerce-wishlist-user-form.html.twig

* commerce_draft-115:
Enabled draft_wishlist module.

* commerce_draft-115:
Allow anonymouse users for using wishlist.

* commerce_draft-115:
Added wishlist to top-menu.

---------

Co-authored-by: Mykhailo Gurei <mykhailo.gurei@lembergsolutions.com>

--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -33,6 +33,7 @@ module:
   commerce_shipping: 0
   commerce_store: 0
   commerce_tax: 0
+  commerce_wishlist: 0
   config: 0
   contact: 0
   contextual: 0
@@ -41,6 +42,7 @@ module:
   dblog: 0
   draft_cart: 0
   draft_search: 0
+  draft_wishlist: 0
   dynamic_page_cache: 0
   editor: 0
   elasticsearch_connector: 0
