--- a/config/default/user.role.anonymous.yml
+++ b/config/default/user.role.anonymous.yml
@@ -8,6 +8,7 @@ dependencies:
     - comment
     - commerce_checkout
     - commerce_product
+    - commerce_wishlist
     - contact
     - eu_cookie_compliance
     - filter
@@ -27,4 +28,5 @@ permissions:
   - 'use text format restricted_html'
   - 'view commerce_product'
   - 'view media'
+  - 'access wishlist'
   - 'display eu cookie compliance popup'
