--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -10,6 +10,7 @@ dependencies:
     - commerce_order
     - commerce_payment
     - commerce_product
+    - commerce_wishlist
     - contact
     - eu_cookie_compliance
     - filter
@@ -37,4 +38,5 @@ permissions:
   - 'view commerce_product'
   - 'view media'
   - 'view own commerce_order'
+  - 'access wishlist'
   - 'display eu cookie compliance popup'
