commerce_draft-132: Added breadcrumb to breadcrumb region.

--- a/config/default/block.block.breadcrumbs.yml
+++ b/config/default/block.block.breadcrumbs.yml
@@ -9,8 +9,8 @@ dependencies:
     - olivero
 id: breadcrumbs
 theme: olivero
-region: header
-weight: -7
+region: breadcrumb
+weight: -8
 provider: null
 plugin: system_breadcrumb_block
 settings:
