--- a/docroot/modules/custom/draft_administration/draft_administration.routing.yml
+++ b/docroot/modules/custom/draft_administration/draft_administration.routing.yml
@@ -1,7 +1,15 @@
-draft_administration.draft:
-  path: '/admin/draft'
+draft_administration.catalogue:
+  path: '/admin/catalogue'
   defaults:
     _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
-    _title: 'Draft'
+    _title: 'Catalogue'
+  requirements:
+    _permission: 'access content'
+
+draft_administration.shop_settings:
+  path: '/admin/shop_settings'
+  defaults:
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'Shop settings'
   requirements:
     _permission: 'access content'
