commerce_draft-132: Added contribute custom_breadcrumbs module. Added draft_token module to use product categories in custom_breadcrumbs module. Removed draft_breadcrumb module - custom implementation of breadcrumbs categories.

--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
+        "drupal/custom_breadcrumbs": "^1.0",
         "drupal/elasticsearch_connector": "^7.x-dev",
         "drupal/environment_indicator": "^4.0",
         "drupal/eu_cookie_compliance": "^1.24",
