--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -38,11 +38,13 @@ module:
   contact: 0
   contextual: 0
   ctools: 0
+  custom_breadcrumbs: 0
   datetime: 0
   dblog: 0
   draft_administration: 0
   draft_cart: 0
   draft_search: 0
+  draft_token: 0
   draft_wishlist: 0
   dynamic_page_cache: 0
   editor: 0
