--- a/docroot/modules/custom/draft_administration/draft_administration.routing.yml
+++ b/docroot/modules/custom/draft_administration/draft_administration.routing.yml
@@ -4,12 +4,20 @@ draft_administration.catalogue:
     _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
     _title: 'Catalogue'
   requirements:
-    _permission: 'access content'
+    _permission: 'administer shop catalogue'
 
 draft_administration.shop_settings:
-  path: '/admin/shop_settings'
+  path: '/admin/shop-settings'
   defaults:
     _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
     _title: 'Shop settings'
   requirements:
-    _permission: 'access content'
+    _permission: 'administer shop settings'
+
+draft_administration.sales:
+  path: '/admin/sales'
+  defaults:
+    _controller: '\Drupal\system\Controller\SystemController::systemAdminMenuBlockPage'
+    _title: 'Sales'
+  requirements:
+    _permission: 'administer shop sales'
